Refactor code, mobile video, header height with js

--- a/dev/styles/user/defaultstyle.scss
+++ b/dev/styles/user/defaultstyle.scss
@@ -52,3 +52,6 @@ button {
 [hidden] {
   display: none !important;
 }
+input[type=text], input[type=submit], textarea{
+	-webkit-appearance: none;
+} 
